# atsaml11xxx

./: .gitignore  ATSAML11E16A.orig.svd  Cargo.toml  Makefile  README.md  device.x  memory.x  ram.x  saml11_xplained_openocd.cfg  thumbv8m.base-none-eabi.json
.cargo/: config
examples/: blink.rs  hello.rs
patches/: lib-fixes.diff  series  svd-compat.diff
src/: lib.rs
src/ac/: mod.rs
src/ac/compctrl/: mod.rs
src/ac/evctrl/: mod.rs
src/ac/intenclr/: mod.rs
src/ac/intenset/: mod.rs
src/ac/intflag/: mod.rs
src/ac/scaler/: mod.rs
src/ac/winctrl/: mod.rs
src/adc/: mod.rs
src/adc/avgctrl/: mod.rs
src/adc/calib/: mod.rs
src/adc/ctrla/: mod.rs
src/adc/ctrlb/: mod.rs
src/adc/ctrlc/: mod.rs
src/adc/dbgctrl/: mod.rs
src/adc/evctrl/: mod.rs
src/adc/gaincorr/: mod.rs
src/adc/inputctrl/: mod.rs
src/adc/intenclr/: mod.rs
src/adc/intenset/: mod.rs
src/adc/intflag/: mod.rs
src/adc/offsetcorr/: mod.rs
src/adc/refctrl/: mod.rs
src/adc/result/: mod.rs
src/adc/sampctrl/: mod.rs
src/adc/seqctrl/: mod.rs
src/adc/seqstatus/: mod.rs
src/adc/swtrig/: mod.rs
src/adc/syncbusy/: mod.rs
src/adc/winlt/: mod.rs
src/adc/winut/: mod.rs
src/ccl/: mod.rs
src/ccl/ctrl/: mod.rs
src/ccl/lutctrl/: mod.rs
src/ccl/seqctrl/: mod.rs
src/dac/: mod.rs
src/dac/ctrla/: mod.rs
src/dac/ctrlb/: mod.rs
src/dac/data/: mod.rs
src/dac/databuf/: mod.rs
src/dac/evctrl/: mod.rs
src/dac/intenclr/: mod.rs
src/dac/intenset/: mod.rs
src/dac/intflag/: mod.rs
src/dac/status/: mod.rs
src/dac/syncbusy/: mod.rs
src/dmac/: mod.rs
src/dmac/baseaddr/: mod.rs
src/dsu/: mod.rs
src/eic/: mod.rs
src/evsys/: mod.rs
src/freqm/: mod.rs
src/gclk/: mod.rs
src/idau/: mod.rs
src/mclk/: mod.rs
src/nvmctrl/: mod.rs
src/opamp/: mod.rs
src/osc32kctrl/: mod.rs
src/oscctrl/: mod.rs
src/pac/: mod.rs
src/pm/: mod.rs
src/port/: mod.rs
src/rstc/: mod.rs
src/rtc/: mod.rs
src/sercom0/: mod.rs
src/supc/: mod.rs
src/sys_tick/: mod.rs
src/system_control/: mod.rs
src/tc0/: mod.rs
src/tram/: mod.rs
src/trng/: mod.rs
src/wdt/: mod.rs
(+332 files in other folders)
